--- a/package.xml
+++ b/package.xml
@@ -3,19 +3,21 @@
   <version>1.0.0</version>
   <description>
     <p>URDF Description package for go2_description</p>
-    <p>This package contains configuration data, 3D models and launch files
-for go2_description robot</p>
+    <p>This package contains configuration data, 3D models and launch files for go2_description robot</p>
   </description>
-  <author>TODO</author>
-  <maintainer email="TODO@email.com" />
+  <maintainer email="rkzdtc@gmail.com">Kunzhao Ren</maintainer>
   <license>BSD</license>
-  <buildtool_depend>catkin</buildtool_depend>
-  <depend>roslaunch</depend>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <exec_depend>ros2launch</exec_depend>
+
   <depend>robot_state_publisher</depend>
   <depend>rviz</depend>
   <depend>joint_state_publisher_gui</depend>
   <depend>gazebo</depend>
+
   <export>
-    <architecture_independent />
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
